--- a/styles/style.css
+++ b/styles/style.css
@@ -6,7 +6,12 @@
     font-style: normal;
   }
   /* header */
- .nav, .banner{
+  .marquee{
+    background-color: #aaf5df;
+    color: #0c0c0c;
+    font-size: 20px;
+}
+ .nav, .banner, .full-story{
     max-width: 1159px;
     margin: 0 auto;
   }
@@ -195,7 +200,7 @@ height: 500px;
     font-size: 30px;
     border: none;
     background-color: orange;
-    padding: 20px;
+    padding: 25px;
     border-radius: 100%;
     text-align: center;
 }
@@ -204,7 +209,7 @@ height: 500px;
     font-size: 30px;
     border: none;
     background-color: orange;
-    padding: 20px;
+    padding: 25px;
     border-radius: 100%;
     text-align: center;
 }
@@ -212,6 +217,82 @@ height: 500px;
     text-align: center;
     margin: 80px;
 }
+/* story */
+
+.Stories-section{
+    background-image: linear-gradient(to bottom, rgba(255,0,0,0), rgba(0, 157, 255, 0.489));
+}
+.story-heading{
+    font-size: 46px;
+    font-weight: 700px;
+    text-align: center;
+}
+.story{
+    display: flex;
+    gap: 20px;
+}
+.grid-for-story{
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    gap: 10px;
+}
+.story-bg{
+    background: white;
+    border-radius: 16px;
+ }
+ 
+.story-bg>img{
+    border-radius: 10px;
+}
+.story-text{
+    padding: 0 50px;
+}
+.story-para{
+    font-size: 15px;
+    font-weight: 500px;
+}
+.story-bold{
+    font-size: 24px;
+    font-weight: 700px;
+}
+.story-two-para{
+    font-size: 16px;
+    font-weight: 700px;
+}
+.story-btn{
+    background-color: #3CD8E8;
+    font-size: 15px;
+    font-weight: 500px;
+    border: none;
+    border-radius: 48px;
+    padding: 15px 19px;
+    color: white;
+    margin: -20px 0px 0px 180px;
+}
+.story-two-btn{
+    background-color: #95B226;
+    color: white;
+    font-size: 15px;
+    font-weight: 500px;
+    border: none;
+    border-radius: 48px;
+    padding: 15px 19px;
+    margin: -20px 0px 0px 60px;
+}
+.View-All{
+    font-size: 20px;
+    font-weight: 700px;
+    border: none;
+    border-radius: 12px;
+    padding: 15px 61px;
+    color: white;
+    background-color: black;
+}
+.view{
+    text-align: center;
+    padding: 80px;
+}
+
 
 /* media */
   @media screen and (max-width:576px) {
@@ -252,5 +333,17 @@ height: 500px;
      .arrow-icon{
         display: none;
      }
-     
+     .grid-for-story{
+        grid-template-columns: repeat(1, 1fr);
+        justify-content: center;
+        align-items: center;
+        padding: 60px;
+     }
+     .story-one{
+        display: none;
+     }
+     .view{
+        padding: 0px 0px 40px 0px;
+        
+     }
    }
